Fixed a version 2 of deep q
This version is closer to original algorithm. Needs to be tested

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -30,6 +30,7 @@
           <p>Number of wins: <span id="wins">0</span></p>
           <p>Win rate over last 20 iterations: <span id="win_rate">0</span></p>
           <p>Action: <span id="action"></span></p>
+          <p>Fastest run: <span id="fastest_run"></span></p>
           <p>Q vector: [<span id="Q0"></span> <span id="Q1"></span> <span id="Q2"></span>]</p>
           <p>State: [<span id="S0"></span> <span id="S1"></span>]</p>
         </div>
